--- a/packages/mgt-components/src/components/mgt-tasks-base/mgt-tasks-base.theme.scss
+++ b/packages/mgt-components/src/components/mgt-tasks-base/mgt-tasks-base.theme.scss
@@ -7,41 +7,22 @@
 
 @import '../../styles/shared-sass-variables.scss';
 
+$background-color: var(--tasks-background-color, set-var(background-color, $theme-default, $common));
+$background-color--completed: var(--task-complete-background, set-var(background-color__sub1, $theme-default, $common));
+$title__color: var(--task-title-color, set-var(title__color__subtitle, $theme-default, $common));
+$button__color--cancel: var(--task-new-cancel-button-color, set-var(color__sub1, $theme-default, $common));
+$detail__color: var(--task-detail-color, set-var(color__sub2, $theme-default, $common));
+
 $tasks: (
-  background-color: (
-    _var: --tasks-background-color,
-    light: $background-color__main--light,
-    dark: $background-color__main--dark
-  ),
-  background-color--completed: (
-    _var: --task-complete-background,
-    light: $background-color__sub1--light,
-    dark: $background-color__sub1--dark
-  ),
   border--completed: (
     _var: --task-complete-border,
     light: 2px dotted $background-color__sub3--light,
     dark: 2px dotted $background-color__sub3--dark
   ),
-  title__color: (
-    _var: --task-title-color,
-    light: $title__color__subtitle--light,
-    dark: $title__color__subtitle--dark
-  ),
   button__background-color--disabled: (
     _var: --task-new-add-button-disabled-background,
     light: $gray30,
     dark: $gray140
-  ),
-  button__color--cancle: (
-    _var: --task-new-cancel-button-color,
-    light: $text__color__sub1--light,
-    dark: $text__color__sub1--dark
-  ),
-  detail__color: (
-    _var: --task-detail-color,
-    light: $text__color__sub2--light,
-    dark: $text__color__sub2--dark
   ),
   icon__color: (
     _var: --task-icon-color,
