--- a/packages/mgt-components/src/components/mgt-people/mgt-people.theme.scss
+++ b/packages/mgt-components/src/components/mgt-people/mgt-people.theme.scss
@@ -5,6 +5,4 @@
  * -------------------------------------------------------------------------------------------
  */
 
-@import '../../styles/shared-styles.scss';
-@import '../../../../../node_modules/office-ui-fabric-core/dist/sass/References';
-@import '../mgt-tasks-base/mgt-tasks-base.scss';
+@import '../../styles/shared-sass-variables.scss';
