--- a/packages/mgt-components/src/components/mgt-person-card/mgt-person-card.scss
+++ b/packages/mgt-components/src/components/mgt-person-card/mgt-person-card.scss
@@ -7,25 +7,22 @@
 
 @import '../../styles/shared-styles.scss';
 @import '../../../../../node_modules/office-ui-fabric-core/dist/sass/References';
+@import './mgt-person-card.theme.scss';
 
 $person-card-display-name-font-size: var(--person-card-display-name-font-size, 20px);
 $person-card-title-font-size: var(--person-card-title-font-size, 14px);
 $person-card-subtitle-font-size: var(--person-card-subtitle-font-size, 12px);
 $person-card-details-title-font-size: var(--person-card-details-title-font-size, 14px);
 $person-card-details-item-font-size: var(--person-card-details-item-font-size, 15px);
-$person-card-display-name-color: var(--person-card-display-name-color, #333333);
-$person-card-title-color: var(--person-card-title-color, #797775);
-$person-card-subtitle-color: var(--person-card-subtitle-color, #797775);
-$person-card-details-title-color: var(--person-card-details-title-color, #000000);
-$person-card-details-item-color: var(--person-card-details-item-color, #201f1e);
-$person-card-background-color: var(--person-card-background-color, #ffffff);
 
 :host {
-  background: $person-card-background-color;
+  background: $background-color;
   width: var(--mgt-flyout-set-width, 340px);
-  font-family: var(--default-font-family);
+  font-family: $font-family;
   overflow: hidden;
   user-select: none;
+  box-shadow: set-var(box-shadow, $theme-default, $common);
+  border: 1px solid set-var(background-color__sub1, $theme-default, $common);
 
   .nav {
     height: 0px;
@@ -40,14 +37,14 @@ $person-card-background-color: var(--person-card-background-color, #ffffff);
       justify-content: center;
 
       svg {
-        fill: #0078d4;
+        fill: #{$commblue_primary};
       }
 
       &:hover {
         cursor: pointer;
 
         svg {
-          fill: #000000;
+          fill: #{$black};
         }
       }
     }
@@ -60,14 +57,12 @@ $person-card-background-color: var(--person-card-background-color, #ffffff);
     padding: 20px;
 
     .person-image {
-      --presence-background-color: var(--person-card-background-color, #ffffff);
-      --presence-icon-color: var(--person-card-background-color, #ffffff);
+      --presence-background-color: #{$background-color};
+      --presence-icon-color: #{$background-color};
       --avatar-size: 75px;
       --font-size: 20px;
       --line2-font-size: 14px;
-      --line2-color: #{$ms-color-gray120};
       --line3-font-size: 12px;
-      --line3-color: #{$ms-color-gray110};
     }
 
     .base-icons {
@@ -75,7 +70,6 @@ $person-card-background-color: var(--person-card-background-color, #ffffff);
       -webkit-align-items: center;
       align-items: center;
       max-width: 120px;
-      // margin-left: 87px;
       margin-top: 16px;
 
       .icon {
@@ -90,16 +84,16 @@ $person-card-background-color: var(--person-card-background-color, #ffffff);
         }
 
         svg {
-          fill: #605e5c;
+          fill: set-var(icon__color, $theme-default, $common);
         }
 
         span {
           margin-left: 8px;
-          color: #0078d4;
+          color: $commblue_primary;
         }
       }
       .icon:hover {
-        color: #004578;
+        color: $commblue_shade20;
       }
     }
   }
@@ -114,14 +108,14 @@ $person-card-background-color: var(--person-card-background-color, #ffffff);
       justify-content: center;
       align-items: center;
       height: 28px;
-      background: #f3f2f1;
-      border-top: 1px solid rgba(196, 196, 196, 0.4);
+      background: $background-color;
+      border-top: 1px solid set-var(line-seperator__color, $theme-default, $common);
       .expanded-details-svg {
         margin-bottom: 3px;
       }
     }
     .expanded-details-button:hover {
-      background-color: rgba(0, 0, 0, 0.068);
+      background-color: set-var(background-color--hover, $theme-default, $common);
     }
     .expanded-details-info {
       padding: 18px;
@@ -132,7 +126,7 @@ $person-card-background-color: var(--person-card-background-color, #ffffff);
         margin: 0 0 24px 0;
         font-weight: 600;
         font-size: $person-card-details-title-font-size;
-        color: $person-card-details-title-color;
+        color: $details-title__color;
       }
 
       .icons {
@@ -140,7 +134,7 @@ $person-card-background-color: var(--person-card-background-color, #ffffff);
         font-style: normal;
         font-weight: normal;
         font-size: $person-card-details-item-font-size;
-        color: $person-card-details-item-color;
+        color: set-var(details-item__color, $theme-default, $person-card);
         text-align: left;
 
         .details-icon {
@@ -162,7 +156,7 @@ $person-card-background-color: var(--person-card-background-color, #ffffff);
         padding-top: 2px;
       }
       .link-subtitle {
-        color: #3078cd;
+        color: $commblue_primary;
         cursor: pointer;
       }
       .link-subtitle:hover {
@@ -172,7 +166,7 @@ $person-card-background-color: var(--person-card-background-color, #ffffff);
     .section-divider {
       width: 96%;
       min-height: 1px;
-      background: #eaeaea;
+      background: set-var(line-seperator__color, $theme-default, $common);
       align-self: center;
     }
   }
@@ -180,7 +174,7 @@ $person-card-background-color: var(--person-card-background-color, #ffffff);
   .section-nav {
     display: flex;
     padding: 0 14px;
-    border-bottom: 1px solid #edebe9;
+    border-bottom: 1px solid set-var(tab__line__color, $theme-default, $common);
 
     .section-nav__icon {
       all: initial;
@@ -197,19 +191,19 @@ $person-card-background-color: var(--person-card-background-color, #ffffff);
       svg {
         width: 20px;
         height: 20px;
-        fill: #605e5c;
+        fill: set-var(icon__color, $theme-default, $common);
       }
 
       &:hover {
-        background: #f3f2f1;
-        border-color: #a19f9d;
+        background: set-var(tab__background-color--hover, $theme-default, $common);
+        border-color: set-var(tab__line__color--hover, $theme-default, $common);
       }
 
       &.active {
-        border-color: #0078d4;
+        border-color: $icon--active;
 
         svg {
-          fill: #0078d4;
+          fill: $icon--active;
         }
       }
     }
@@ -232,14 +226,16 @@ $person-card-background-color: var(--person-card-background-color, #ffffff);
   .quick-message {
     display: flex;
     flex-direction: row;
+    border-bottom: 1px solid set-var(tab__line__color, $theme-default, $common);
     padding: 12px 10px 8px 10px;
 
     .quick-message__input {
       flex-grow: 1;
       padding-left: 8px;
-      border: 2px solid #f3f2f1;
+      border: none;
       border-radius: 2px;
-      background-color: #f3f2f1;
+      color: $color;
+      background-color: set-var(background-color__sub2, $theme-default, $common);
     }
 
     .quick-message__send {
@@ -251,14 +247,14 @@ $person-card-background-color: var(--person-card-background-color, #ffffff);
       justify-content: center;
 
       svg {
-        fill: #605e5c;
+        fill: set-var(color__sub2, $theme-default, $common);
         height: 18px;
         width: 18px;
       }
 
       &:hover {
         svg {
-          fill: #000000;
+          fill: set-var(color__sub1, $theme-default, $common);
         }
       }
     }
@@ -276,7 +272,7 @@ $person-card-background-color: var(--person-card-background-color, #ffffff);
         content: '';
         width: 90%;
         transform: translateX(-50%);
-        border-bottom: 1px solid #eaeaea;
+        border-bottom: 1px solid set-var(tab__line__color, $theme-default, $common);
         left: 50%;
         bottom: 0;
       }
@@ -289,20 +285,20 @@ $person-card-background-color: var(--person-card-background-color, #ffffff);
 
       .section__title {
         flex-grow: 1;
-        color: #323130;
+        color: set-var(title__color__subtitle, $theme-default, $common);
         font-size: 14px;
         font-weight: 600;
       }
 
       .section__show-more {
-        color: #0078d4;
+        color: $commblue_primary;
         font-size: 12px;
         font-weight: 600;
         align-self: center;
 
         &:hover {
           cursor: pointer;
-          color: #004578;
+          color: $commblue_shade20;
         }
       }
 
