--- a/packages/mgt-components/src/components/mgt-person-card/sections/mgt-person-card-organization/mgt-person-card-organization.scss
+++ b/packages/mgt-components/src/components/mgt-person-card/sections/mgt-person-card-organization/mgt-person-card-organization.scss
@@ -6,6 +6,8 @@
  */
 
 @import '../base-person-card-section.scss';
+@import '../../../../styles/shared-styles.scss';
+@import '../../../../styles/shared-sass-variables.scss';
 
 :host {
   position: relative;
@@ -40,19 +42,19 @@
     .title {
       font-size: 14px;
       font-weight: 600;
-      color: #323130;
+      color: set-var(title__color__subtitle, $theme-default, $common);
       margin: 0 20px 20px 20px;
     }
 
     .subtitle {
-      color: #797775;
+      color: set-var(title__color__sub2, $theme-default, $common);
       font-size: 14px;
       margin: 0 20px 8px 20px;
     }
 
     .divider {
       display: flex;
-      background: #e8e8e8;
+      background: set-var(line-seperator__color, $theme-default, $common);
       height: 1px;
       margin-top: 26px;
       margin-bottom: 18px;
@@ -71,8 +73,8 @@
       margin-right: 20px;
 
       &.org-member--target {
-        background-color: #f5faff;
-        border: 1px solid #3078d0;
+        background-color: set-var(background-color__sub2, $theme-default, $common);
+        border: 1px solid $commblue_primary;
       }
 
       &.org-member--direct-report:not(:last-child) {
@@ -80,12 +82,12 @@
       }
 
       &:not(.org-member--target) {
-        background-color: #ffffff;
-        border: 1px solid #e8e8e8;
+        background-color: set-var(background-color__sub1, $theme-default, $common);
+        border: 1px solid set-var(line-seperator__color, $theme-default, $common);
 
         &:hover {
           cursor: pointer;
-          background-color: #f3f2f1;
+          background-color: set-var(background-color--hover, $theme-default, $common);
         }
       }
 
@@ -112,20 +114,20 @@
 
         .org-member__name {
           font-size: 16px;
-          color: #323130;
+          color: set-var(color__sub1, $theme-default, $common);
           font-weight: 600;
         }
 
         .org-member__title,
         .org-member__department {
           font-weight: 14px;
-          color: #797775;
+          color: set-var(color__sub2, $theme-default, $common);
         }
       }
     }
 
     .org-member__separator {
-      border: 1px solid #e8e8e8;
+      border: 1px solid set-var(line-seperator__color, $theme-default, $common);
       box-sizing: border-box;
       width: 0;
       margin: 0 50%;
@@ -139,7 +141,7 @@
 
       &:hover {
         cursor: pointer;
-        background-color: #f3f2f1;
+        background-color: set-var(background-color--hover, $theme-default, $common);
       }
 
       .coworker__person {
@@ -147,13 +149,12 @@
         width: 46px;
         border-radius: 46px;
         margin-right: 8px;
-        background-color: #e8e8e8;
 
         mgt-person {
           --font-size: 16px;
           --line2-text-transform: uppercase;
           --line2-font-size: 14px;
-          --line2-color: #797775;
+          --line2-color: set-var(color__sub2, $theme-default, $common);
           --avatar-size: 46px;
         }
       }
