changing display property for firefox bug

--- a/packages/mgt-components/src/components/mgt-teams-channel-picker/mgt-teams-channel-picker.scss
+++ b/packages/mgt-components/src/components/mgt-teams-channel-picker/mgt-teams-channel-picker.scss
@@ -86,7 +86,7 @@
     }
     .team-chosen-input[contenteditable]:empty::after {
       content: attr(data-placeholder);
-      display: inline-block;
+      display: flex;
       color: $placeholder__color;
     }
 
