--- a/samples/proxy-provider-asp-net-mvc/graph-tutorial/Views/Home/Index.cshtml
+++ b/samples/proxy-provider-asp-net-mvc/graph-tutorial/Views/Home/Index.cshtml
@@ -18,10 +18,14 @@
             <mgt-people>
                 <template>
                     <div data-for="person in people">
-                        <mgt-person person-details="{{person}}" person-image="@Html.Raw("@")" view="twolines" person-card="hover"></mgt-person>
+                        <mgt-person person-details="{{person}}" fetch-image view="twolines" person-card="hover"></mgt-person>
                     </div>
                 </template>
             </mgt-people>
+
+            <script>
+                console.log(mgt.MgtPersonCard.getScopes());
+            </script>
         }
         else
         {
