--- a/packages/mgt-components/src/components/mgt-tasks-base/mgt-tasks-base.scss
+++ b/packages/mgt-components/src/components/mgt-tasks-base/mgt-tasks-base.scss
@@ -150,6 +150,7 @@ $task-border-completed: var(--task-complete-border, 2px dotted inherit);
     margin: var(--task-margin, 0 0 18px 0);
     padding: var(--task-padding, 0 0 0 0);
     background-color: $background-color;
+    border: set-var(border, $theme-default, $tasks);
 
     .TaskContent {
       display: flex;
