RTL css for presence

--- a/packages/mgt-components/src/components/mgt-person/mgt-person.scss
+++ b/packages/mgt-components/src/components/mgt-person/mgt-person.scss
@@ -421,5 +421,59 @@ mgt-person .avatar-icon {
         margin: var($details-spacing, 0px 6px 0px 0px);
       }
     }
+
+    .user-presence {
+      .presence-oof-offline svg {
+        margin-right: calc(#{$avatar-size} * 0.07 - 2px);
+      }
+      .presence-offline::before {
+        margin-right: calc(#{$avatar-size} * 0.07 - 2px);
+      }
+
+      .presence-available::before {
+        margin-right: calc(#{$avatar-size} * 0.07 - 2px);
+      }
+
+      .presence-oof-available::before {
+        margin-right: calc(#{$avatar-size} * 0.07 - 2px);
+      }
+
+      .presence-away::before {
+        margin-right: calc(#{$avatar-size} * 0.07 - 2px);
+      }
+
+      .presence-dnd::before {
+        margin-right: calc(#{$avatar-size} * 0.07 - 2px);
+      }
+
+      .presence-oof-dnd::before {
+        margin-right: calc(#{$avatar-size} * 0.07 - 2px);
+      }
+    }
+
+    &.small {
+      & .initials-text,
+      & .contact-icon {
+        font-size: calc(#{$avatar-size-s} * 0.4);
+      }
+      .user-presence {
+        left: calc(#{$avatar-size-s} - 8px);
+        top: calc(#{$avatar-size-s} - 8px);
+        width: 8px;
+        height: 8px;
+
+        .presence-basic {
+          width: 4px;
+          height: 4px;
+          border-radius: 4px;
+          padding: 0;
+
+          & .presence-oof-offline svg {
+            height: 0;
+            width: 0;
+          }
+        }
+      }
+    }
   }
 }
