--- a/packages/mgt-components/src/components/mgt-people-picker/mgt-people-picker.scss
+++ b/packages/mgt-components/src/components/mgt-people-picker/mgt-people-picker.scss
@@ -141,7 +141,7 @@ mgt-people-picker .root {
         text-align: left;
         list-style-type: none;
         background-color: $dropdown__background-color;
-
+        max-height: var(--mgt-flyout-set-height, unset);
         li {
           cursor: pointer;
         }
