handling for spaces and extra size needed for text like 'g' in accessible situations

--- a/packages/mgt-components/src/components/mgt-teams-channel-picker/mgt-teams-channel-picker.scss
+++ b/packages/mgt-components/src/components/mgt-teams-channel-picker/mgt-teams-channel-picker.scss
@@ -60,7 +60,7 @@
       }
       .search-wrapper {
         margin-left: 12px;
-        height: 16px;
+        height: 18px;
         display: flex;
         flex-wrap: nowrap;
         align-items: center;
@@ -70,7 +70,7 @@
 
     .search-wrapper {
       overflow: hidden;
-      height: 16px;
+      height: 18px;
       display: flex;
       flex-wrap: nowrap;
       align-items: center;
@@ -115,6 +115,7 @@
     }
 
     .input-search-start {
+      white-space: nowrap;
       line-height: normal;
       margin-inline-start: 0px;
       margin-inline-end: 0px;
