--- a/packages/mgt-components/src/components/mgt-person-card/sections/mgt-person-card-contact/mgt-person-card-contact.scss
+++ b/packages/mgt-components/src/components/mgt-person-card/sections/mgt-person-card-contact/mgt-person-card-contact.scss
@@ -56,7 +56,7 @@
           font-weight: 400;
 
           .part__link {
-            color: $commblue_primary;
+            color: $commblue_shade20;
             font-family: $font-family;
             font-size: 14px;
             cursor: pointer;
@@ -67,7 +67,7 @@
             display: inline-block;
 
             &:hover {
-              color: #004578;
+              color: $commblue_shade20;
             }
           }
         }
