--- a/packages/mgt-components/src/components/mgt-person-card/sections/mgt-person-card-organization/mgt-person-card-organization.scss
+++ b/packages/mgt-components/src/components/mgt-person-card/sections/mgt-person-card-organization/mgt-person-card-organization.scss
@@ -74,7 +74,7 @@
 
       &.org-member--target {
         background-color: set-var(background-color__sub2, $theme-default, $common);
-        border: 1px solid $commblue_primary;
+        border: 1px solid $commblue_shade20;
       }
 
       &.org-member--direct-report:not(:last-child) {
