--- a/packages/mgt-components/src/components/mgt-person-card/sections/mgt-person-card-contact/mgt-person-card-contact.scss
+++ b/packages/mgt-components/src/components/mgt-person-card/sections/mgt-person-card-contact/mgt-person-card-contact.scss
@@ -45,7 +45,7 @@
 
         .part__title {
           font-size: 12px;
-          color: set-var(title__color__sub2, $theme-default, $common);
+          color: set-var(color__sub4, $theme-default, $common);
           line-height: 20px;
         }
 
