Added missing license

--- a/packages/mgt-components/src/styles/theme.scss
+++ b/packages/mgt-components/src/styles/theme.scss
@@ -1,3 +1,10 @@
+/**
+ * -------------------------------------------------------------------------------------------
+ * Copyright (c) Microsoft Corporation.  All Rights Reserved.  Licensed under the MIT License.
+ * See License in the project root for license information.
+ * -------------------------------------------------------------------------------------------
+ */
+
 @import '../components/mgt-people-picker/mgt-people-picker.theme.scss';
 @import '../components/mgt-teams-channel-picker/mgt-teams-channel-picker.theme.scss';
 @import '../components/mgt-login/mgt-login.theme.scss';
