Removed explicit focus styles in person-card

--- a/packages/mgt-components/src/components/mgt-person-card/mgt-person-card.scss
+++ b/packages/mgt-components/src/components/mgt-person-card/mgt-person-card.scss
@@ -302,8 +302,7 @@ $person-card-details-item-font-size: var(--person-card-details-item-font-size, 1
         align-self: center;
         text-decoration: none;
 
-        &:hover,
-        &:focus {
+        &:hover {
           cursor: pointer;
           color: $commblue_shade20;
         }
