--- a/packages/mgt-components/src/styles/theme.scss
+++ b/packages/mgt-components/src/styles/theme.scss
@@ -14,3 +14,4 @@
 @import '../components/mgt-people/mgt-people.theme.scss';
 
 @import '../components/mgt-tasks-base/mgt-tasks-base.theme.scss';
+@import '../components/mgt-file/mgt-file.theme.scss';
